Add new changes to blog

--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -1,10 +1,7 @@
-/**{
-    outline: 1px solid red;
-}*/
-
 /*==================================================
 =            Bootstrap 3 Media Queries             =
 ==================================================*/
+
 
 
 
@@ -12,44 +9,272 @@
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px) {
+    a#blog-link {
+      padding: 0px;
+      background-color: white;
+      color: #3fb0ac;
+      display:block;
+      line-height: 52px;
+    }
+    #contact-header-projects {
+    font-size:80px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color:#3fb0ac;
+    text-align:center;
+    width:100%;
+    margin-top: 0px;
+    margin-bottom: 4%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+  }
 
+  .project-title {
+    text-align: center;
+    font-size:48px;
+    font-weight:300;
+  }
+
+  .project-description {
+    text-align: center;
+    font-size:32px;
+    color: black;
+    height: 70px;
+  }
+  .description {
+    width: 445px;
+    margin: 0 auto;
+    padding-bottom: 186px;
+  }
+
+  .project-image img {
+    width: 700px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .navigation {
+    padding: 10px;
+    list-style-type: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    color:#3fb0ac;
+    font-size: 40px;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px) {
+  #contact-header-projects {
+    font-size:80px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color:#3fb0ac;
+    text-align:center;
+    width:100%;
+    margin-top: 0px;
+    margin-bottom: 4%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+  }
+
+  .project-title {
+    text-align: center;
+    font-size:48px;
+    font-weight:300;
+  }
+
+  .project-description {
+    text-align: center;
+    font-size:32px;
+    color: black;
+    height: 70px;
+  }
+  .description {
+    width: 445px;
+    margin: 0 auto;
+    padding-bottom: 186px;
+  }
+  .project-image img {
+    width: 700px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
+    #contact-header-projects {
+    font-size:80px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color:#3fb0ac;
+    text-align:center;
+    width:100%;
+    margin-top: 0px;
+    margin-bottom: 4%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+  }
+
+  .project-title {
+    text-align: center;
+    font-size:48px;
+    font-weight:300;
+  }
+
+  .project-description {
+    text-align: center;
+    font-size:32px;
+    color: black;
+    height: 70px;
+  }
+  .description {
+    width: 445px;
+    margin: 0 auto;
+    padding-bottom: 186px;
+  }
+  .project-image img {
+    width: 700px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-    .slide {
-        height:100% !important;
-    }
+  a#blog-link {
+    padding: 0px;
+    background-color: white;
+    color: #3fb0ac;
+    display:block;
+    line-height: 30px;
+  }
+  #contact-header-projects {
+    font-size:50px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color:#3fb0ac;
+    text-align:center;
+    width:100%;
+    margin-top: 0px;
+    margin-bottom: 4%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+  }
+
+  .project-title {
+    text-align: center;
+    font-size:25px;
+    font-weight:300;
+  }
+
+  .project-description {
+    text-align: center;
+    font-size:15px;
+    color: black;
+    height: 70px;
+  }
+  .description {
+    width: 445px;
+    margin: 0 auto;
+    padding-bottom: 0px;
+  }
+  .project-image img {
+    width: 445px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .navigation {
+    padding: 10px;
+    list-style-type: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    color:#3fb0ac;
+    font-size: 25px;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
-    .slide {
-        height:100% !important;
-    }
-}
+  a#blog-link {
+    padding: 0px;
+    background-color: white;
+    color: #3fb0ac;
+    display:block;
+    line-height: 30px;
+  }
 
+  #contact-header-projects {
+    font-size:50px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color:#3fb0ac;
+    text-align:center;
+    width:100%;
+    margin-top: 0px;
+    margin-bottom: 4%;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+  }
+
+  .project-title {
+    text-align: center;
+    font-size:25px;
+    font-weight:300;
+  }
+
+  .project-description {
+    text-align: center;
+    font-size:15px;
+    color: black;
+    height: 70px;
+  }
+  .description {
+    width: 445px;
+    margin: 0 auto;
+    padding-bottom: 0px;
+  }
+  .project-image img {
+    width: 445px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .navigation {
+    padding: 10px;
+    list-style-type: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    color:#3fb0ac;
+    font-size: 25px;
+    width: 100%;
+    text-align: center;
+  }
+}
 
 html,body {
     font-family: 'Raleway', sans-serif;
     width:100%;
-    height:100%;
 }
 
 .slide {
     background-attachment: fixed;
     width:100%;
-    height:50%;
+    /*height:50%;*/
     position: relative;
-    box-shadow:inset 0px 10px 10px rgba(0,0,0,0.3);
 }
 
 .wrapper {
@@ -76,6 +301,7 @@ html,body {
 }
 
 #slide1 {
+    height:800px;
     background-color: #3fb0ac;
 
 }
@@ -85,6 +311,7 @@ html,body {
 }
 
 #slide3 {
+    height:50%;
     background-color:white;
     position:absolute;
     margin:0px;
@@ -97,23 +324,12 @@ html,body {
     text-align: center;
 }
 
-.navigation {
-    padding: 10px;
-    list-style-type: none;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    color:#3fb0ac;
-    font-size: 25px;
-    width: 100%;
-    text-align: center;
-}
-
 .navigation li {
     display: inline-block;
     float: none;
     text-align: center;
     padding:15px;
-    /*position: relative;*/
+    position: relative;
 }
 
 #front-page {
@@ -148,74 +364,28 @@ p#title-li {
     text-transform: uppercase;
 }
 
-ul#images {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 0%;
-    position: relative;
-    font-family: 'Raleway', sans-serif;
-    font-size: 20px;
-    width:100%;
-    text-align:center;
+.contact-icons {
+    color:#3fb0ac;
+    font-size:30px;
 }
 
-li#images-li {
-    display: inline;
-    font-size: 30px;
-    padding-right: 70px;
-    padding-left: 30px;
-    color:#173e43;
-    width:100%
-}
-
-ul#contact-icons {
-    list-style-type: none;
-    text-align:center;
-    color:#3090C7;
-    position: relative;
-}
-
-li#contact-icons-li {
-    display: inline;
-    padding-right:30px;
-    padding-left: 60px;
-    color:#8066B3;
-    font-size:40px;
-}
-
-ul#contact-icons-info {
-    list-style-type: none;
-    position: relative;
-    padding-bottom: 20px;
-    text-align:center;
-    margin-bottom:10px;
-}
-
-li#contact-icons-info-li {
-    display: inline;
-    padding-right:60px;
-    padding-left: 20px;
+.contact-icons-info {
     color: gray;
-    font-size:23px;
+    font-size:20px;
     text-align:center;
+    font-weight: 300;
 }
 
-ul#social-media-icons {
-    list-style-type: none;
-    margin: 0;
-    padding: 10px;
-    margin-top: 7%;
+.social-media-icons-container {
+    padding-top: 80px;
+    padding-bottom: 100px;
+    width: 50%;
+    margin: 0 auto;
 }
 
-li.social-media-icons-li {
-    display: inline;
-    padding:50px;
-    height: '150px';
-    width: '150px';
+.social-media-icons {
+    margin-bottom: 30px;
 }
-
-
 
 #contact-page {
     top:0%;
@@ -225,26 +395,21 @@ li.social-media-icons-li {
 }
 
 #contact-header {
-    font-size:80px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 300;
-    color:white;
-    text-shadow: 1px 1px #000000;
-    text-align:center;
-    background-color: #8066B3;
-    width:100%;
-    margin-top:0px;
-    padding-top: 30px;
-    padding-bottom: 10px;
-    margin-bottom: 7%;
+  font-size:50px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  color:#3fb0ac;
+  text-align:center;
+  width:100%;
+  margin-top: 0px;
+  margin-bottom: 4%;
+  padding-top: 50px;
+  padding-bottom: 40px;
+  text-transform: uppercase;
 }
 
-h2.picture-title {
-    font-size:40px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    color:#3fb0ac;
-    text-align:center;
+.item {
+  margin-bottom: 40px;
 }
 
 p {
@@ -255,19 +420,15 @@ p {
     text-align:center;
 }
 
-#contact-header-projects {
-    font-size:80px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 300;
-    color:#3fb0ac;
-    text-shadow: 1px 1px #000000;
-    text-align:center;
-    width:100%;
-    margin-top:0px;
-    /*margin-bottom: 8%;*/
-    padding-top: 15px;
-    padding-bottom: 10px;
-    /*background-color:#A61919;*/
+.project {
+  margin-bottom: 100px;
+}
+
+.separator {
+    background-color: lightgrey;
+    height: 2px;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .text {
@@ -301,165 +462,4 @@ p {
     0% { opacity:1; }
     50% { opacity:0; }
     100% { opacity:1; }
-}
-
-/* Makes images fully responsive */
-
-.img-responsive,
-.thumbnail > img,
-.thumbnail a > img,
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-/* ------------------- Carousel Styling ------------------- */
-
-.carousel-inner {
-  border-radius: 15px;
-}
-
-/*.carousel-caption {
-  background-color: rgba(0,0,0,.5);
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 10;
-  padding: 0 0 10px 25px;
-  color: #fff;
-  text-align: left;
-}*/
-
-.carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  /*z-index: 15;*/
-  margin: 0;
-  padding: 0 25px 25px 0;
-  text-align: right;
-}
-
-.carousel-control.left,
-.carousel-control.right {
-  background-image: none;
-}
-
-
-/* ------------------- Section Styling - Not needed for carousel styling ------------------- */
-
-.section-white {
-   padding: 10px 0;
-}
-
-.section-white {
-  background-color: #fff;
-  /*color: #555;*/
-}
-
-@media screen and (min-width: 768px) {
-
-  .section-white {
-     padding: 1.5em 0;
-  }
-
-}
-
-@media screen and (min-width: 992px) {
-
-  .container {
-    max-width: 930px;
-  }
-
-}
-
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-}
-
-.hovereffect .overlay {
-    padding:20px;
-  position: absolute;
-  overflow: hidden;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  width: 55%;
-  height: 81%;
-  left: 22%;
-  top: 10%;
-  border-radius: 80%;
-  border: 2px solid #ffffff;
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(50%,50%,0);
-  transform: translate3d(50%,50%,0);
-}
-
-.hovereffect:hover .overlay {
-     padding:20px;
-  background-color: #3fb0ac;
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  -webkit-transition: all 0.35s;
-  transition: all 0.35s;
-}
-
-.hovereffect:hover img {
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="1.4" /><feFuncG type="linear" slope="1.4" /><feFuncB type="linear" slope="1.4" /></feComponentTransfer></filter></svg>#filter');
-  filter: brightness(1.4);
-  -webkit-filter: brightness(1.4);
-  opacity: 0.1;
-}
-
-.hovereffect h2 {
-font-family: 'Raleway', sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  position: relative;
-  font-size: 35px;
-  font-weight: 400;
-  padding: 35px;
-  background-color: transparent;
-  color: #ffffff;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-150%,-400%,0);
-  transform: translate3d(-150%,-400%,0);
-}
-
-.hovereffect a, .hovereffect p {
-font-family: 'Raleway', sans-serif;
-  color: #ffffff;
-  font-weight: 300;
-  padding: 1em 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-150%,-400%,0);
-  transform: translate3d(-150%,-400%,0);
-}
-
-.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2, .hovereffect:hover .overlay {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
 }
