Add updated resume

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -84,7 +84,7 @@
           <div class="border col-lg-3">
             <figure class="item">
               <div class="contact-icons">Resume <span class="glyphicon glyphicon-pencil"></span></div>
-              <figcaption class="caption contact-icons-info"><%= link_to "Click Here", "http://docdro.id/TBFIxXH", :target => "_blank" %></figcaption>
+              <figcaption class="caption contact-icons-info"><%= link_to "Click Here", "http://docdro.id/fiUW4lZ", :target => "_blank" %></figcaption>
             </figure>
           </div>
         </div><!--.row-->
