--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -92,22 +92,22 @@
       <div class="social-media-icons-container">
         <div class="border col-xs-3">
           <div class="social-media-icons">
-            <%= link_to image_tag("GitHub.png"), "http://github.com/psaigal", :target => "_blank" %>
+            <figure><%= link_to image_tag("GitHub.png"), "http://github.com/psaigal", :target => "_blank" %></figure>
           </div>
         </div>
         <div class="border col-xs-3">
           <div class="social-media-icons">
-            <%= link_to image_tag("GooglePlus.png"), "https://plus.google.com/100529383494509522614/posts", :target => "_blank" %>
+            <figure><%= link_to image_tag("GooglePlus.png"), "https://plus.google.com/100529383494509522614/posts", :target => "_blank" %></figure>
           </div>
         </div>
         <div class="border col-xs-3">
           <div class="social-media-icons">
-            <%= link_to image_tag("LinkedIn.png"), "https://www.linkedin.com/in/priyanka-saigal-5034ab56", :target => "_blank" %>
+            <figure><%= link_to image_tag("LinkedIn.png"), "https://www.linkedin.com/in/priyanka-saigal-5034ab56", :target => "_blank" %></figure>
           </div>
         </div>
         <div class="border col-xs-3">
           <div class="social-media-icons">
-            <%= link_to image_tag("Twitter.png"), "https://twitter.com/priyankasaigal", :target => "_blank" %>
+            <figure><%= link_to image_tag("Twitter.png"), "https://twitter.com/priyankasaigal", :target => "_blank" %></figure>
           </div>
         </div>
       </div><!--.row-->
