Add css animations to slides

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div><!--End Slide 1-->
 
-  <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
+  <div class="slide basic-waypoint os-animation" data-os-animation="fadeIn" data-os-animation-delay="0s" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
     <p id="contact-header-projects">Portfolio</p>
     <div class="container-fluid">
       <div class="row">
@@ -58,7 +58,7 @@
 
   <div class="separator"></div>
 
-  <div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
+  <div class="slide basic-waypoint os-animation" data-os-animation="zoomIn" data-os-animation-delay="0s" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
     <div id="contact-page">
         <p id="contact-header">Contact</p>
 
