--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -577,3 +577,11 @@ p {
     50% { opacity:0; }
     100% { opacity:1; }
 }
+
+.os-animation{
+  opacity: 0;
+}
+
+.os-animation.animated{
+    opacity: 1;
+}
