Add new fcc project

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -19,6 +19,17 @@
     <p id="contact-header-projects">Portfolio</p>
     <div class="container-fluid">
       <div class="row">
+        <a href="https://github.com/psaigal/teacher_dashboard" target="_blank">
+          <div class="col-6 col-md-4 project">
+            <div class="description">
+              <p class="project-title">freeCodeCamp Teacher Dashboard</p>
+              <p class="project-description">Dashboard that enables teachers to track student progress on freeCodeCamp, a free, open-source learning platform with 400,000+ active monthly users</p>
+            </div>
+            <div class="project-image">
+              <img class="project-image" src="/imgs/fcc.png">
+            </div>
+          </div>
+        </a>
         <a href="https://glycemopedia.herokuapp.com/" target="_blank">
           <div class="col-6 col-md-4 project">
             <div class="description">
