--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -2,10 +2,10 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid nav-container">
       <ul class="nav navbar-nav navigation">
-        <li data-slide="1" class="active">About Me</li>
-        <li data-slide="2" class="active">Portfolio</li>
-        <li data-slide="3" class="active">Contact Me</li>
-        <li><a id="blog-link">Blog</a></li>
+        <li data-slide="1" class="active nav-link">About Me</li>
+        <li data-slide="2" class="active nav-link">Portfolio</li>
+        <li data-slide="3" class="active nav-link">Contact Me</li>
+        <li class="nav-link"><a id="blog-link">Blog</a></li>
       </ul>
     </div>
   </nav>
@@ -69,33 +69,33 @@
 
   <div class="separator"></div>
 
-  <div class="slide basic-waypoint os-animation" data-os-animation="zoomIn" data-os-animation-delay="0s" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
+  <div class="slide" id="slide3" data-slide="3" data-stellar-background-ratio="0.5">
     <div id="contact-page">
         <p id="contact-header">Contact</p>
 
         <div class="border row">
-          <div class="border col-lg-3">
+          <div class="border col-lg-3 basic-waypoint os-animation" data-os-animation="slideInLeft" data-os-animation-delay="0s">
             <figure class="item">
               <div class="contact-icons">Name <span class="glyphicon glyphicon-user"></div>
               <figcaption class="caption contact-icons-info">Priyanka Saigal</figcaption>
             </figure>
           </div>
-          <div class="border col-lg-3">
+          <div class="border col-lg-3 basic-waypoint os-animation" data-os-animation="slideInLeft" data-os-animation-delay="0s">
             <figure class="item">
               <div class="contact-icons">Location <span class="glyphicon glyphicon-map-marker"></span></div>
               <figcaption class="caption contact-icons-info">San Francisco, CA</figcaption>
             </figure>
           </div>
-          <div class="border col-lg-3">
+          <div class="border col-lg-3 basic-waypoint os-animation" data-os-animation="slideInLeft" data-os-animation-delay="0s">
             <figure class="item">
               <div class="contact-icons">Email <span class="glyphicon glyphicon-envelope"></span></div>
               <figcaption class="caption contact-icons-info">psaigal48@gmail.com</figcaption>
             </figure>
           </div>
-          <div class="border col-lg-3">
+          <div class="border col-lg-3 basic-waypoint os-animation" data-os-animation="slideInLeft" data-os-animation-delay="0s">
             <figure class="item">
               <div class="contact-icons">Resume <span class="glyphicon glyphicon-pencil"></span></div>
-              <figcaption class="caption contact-icons-info"><%= link_to "Click Here", "http://docdro.id/fiUW4lZ", :target => "_blank" %></figcaption>
+              <figcaption class="caption contact-icons-info"><%= link_to "Click Here", "http://docdro.id/30j2xMs", :target => "_blank" %></figcaption>
             </figure>
           </div>
         </div><!--.row-->
